--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "@types/yup": "^0.32.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "formik": "^2.4.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
