--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "@types/yup": "^0.32.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
-    "react-spinners": "^0.13.8",
     "sharp": "^0.32.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
