--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/yup": "^0.32.0",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
