--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "@types/yup": "^0.32.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/postgres": "^0.7.2",
     "autoprefixer": "10.4.14",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
